<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/en_player_vs_player"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/en_clock_time"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/rg_time"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clock">

        <RadioButton
            android:id="@+id/rb_opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="5dp"
            android:text="@string/en_no_time"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/en_5_min"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/en_10_min"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_opt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/en_15_min"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_opt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/en_20_min"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_opt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/en_30_min"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/myappbutton"
        android:onClick="btn_play_onClick"
        android:text="@string/en_play"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_time" />

</android.support.constraint.ConstraintLayout>