<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/en_play"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_play"
        app:layout_constraintVertical_bias="0.237">

        <Button
            android:id="@+id/btn_PvsCC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/compbutton"
            android:onClick="btn_PvsCC_onClick"
            android:text="@string/en_player_vs_computer"
            android:textColor="#222034" />

        <Button
            android:id="@+id/btn_PvsC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/myappbutton"
            android:onClick="btn_PvsC_onClick"
            android:text="@string/en_player_vs_computer"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_PvsP"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/myappbutton"
            android:onClick="btn_PvsP_onClick"
            android:text="@string/en_player_vs_player"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_CvsC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/myappbutton"
            android:onClick="btn_CvsC_onClick"
            android:text="@string/en_computer_vs_computer"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>